@@ -875,6 +875,7 @@ gasmark[degR] \
 # Basic constants
 
 pi                      3.14159265358979323846
+π                       pi
 c                       2.99792458e8 m/s # speed of light in vacuum (exact)
 light                   c
 mu0                     4 pi 1e-7 H/m    # permeability of vacuum (exact)
