@@ -299,6 +299,7 @@ degreaumur	1.25 K	273.149999999999977	10|8 * degC	\N
 degK	1 K	\N	K	\N
 tempK	1 K	\N	K	\N
 pi	3.14159265358979312	\N	3.14159265358979323846	\N
+π	3.14159265358979312	\N	pi	\N
 c	299792458 m/s	\N	2.99792458e8 m/s	\N
 light	299792458 m/s	\N	c	\N
 mu0	1.25663706143591729e-06 m*kg/s^2*A^2	\N	4 pi 1e-7 H/m	\N
